# BEST

./: README.md  pyproject.toml
src/: BPI2012_conversions.py  best_prediction.py  log_characteristics.py
src/best4ppm/configs/: model_configs.yml
src/best4ppm/data/: sequencedata.py
src/best4ppm/eval/: evaluator.py
src/best4ppm/models/: best.py
src/best4ppm/util/: sequence_utils.py
